--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "avax-price",
-  "version": "0.1.0",
-  "private": true,
+"0.1.1"  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
