--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "avax-price",
-"0.1.1"  "private": true,
+  "version": "0.1.1",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
